Fix broken landing page hero band on mobile and add missing landing page html language attribute

--- a/_sass/layouts/home.scss
+++ b/_sass/layouts/home.scss
@@ -6,8 +6,6 @@
 
   background-image: url($baseurl + '/assets/images/bg-home-primary.png');
   background-repeat: no-repeat;
-  background-size: 100%;
-
   p {
     margin: 2rem 0;
   }
